# kx10

./: .gdbinit  .gitignore  ChangeLog  Makefile.in  boot.exb  bpf.patch  config.h.in  config.sub  configure  configure.in  console.c  eacalc.c  ether_bpf.c  ether_dummy.c  ether_netbsd.c  ether_snit.c  ether_ultrix.c  genboole  gendisp  genhw  genskipjump  gentxxx  i_arith.c  i_byte.c  i_io.c  i_misc.c  i_rh20.c  i_shift.c  i_simple.c  i_skipjump.c  i_stack.c  interrupt.c  kx10.c  loadexe.c  misc.c  pager.c  pdp10.h  readconfig.c  unpack.c  version.c
